--- a/views/users/forget.ejs
+++ b/views/users/forget.ejs
@@ -1,6 +1,6 @@
 <% include('../layouts/header.ejs') %>
 
-<h1>Login</h1>
+<h1>Forget</h1>
 
 <% 
 
@@ -13,15 +13,13 @@
 %>
 
 
-<form action="/login" method="post">
+<form action="/forget" method="post">
 
     <input type="email" name="email" required placeholder="Enter Email">
     <br><br>
-    <input type="password" name="password" required placeholder="Enter Password">
-    <br><br>
-    <input type="Submit" value="Login">
+    <input type="Submit" value="Send Reset Link">
 
 </form>
-<a href="/forget">Forget Password</a>
+
 
 <% include('../layouts/footer.ejs') %>
