--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1,7 +1,22 @@
 <% include('../layouts/header.ejs') %>
 
 
-<h1> Welcome on Home </h1>
+<h3> Welcome, <%= user.name %></h3>
+
+<table width="50%">
+    <tr>
+        <td><img src="userImages/<%= user.image %>" width = "100px" height = "100px" alt="<%= user.image %>"></td>
+    </tr>
+    <tr>
+        <td>Email</td>
+        <td><%= user.email %> </td>
+    </tr>
+    <tr>
+        <td>Mobile</td>
+        <td><%= user.mobile %></td>
+    </tr>
+</table>
+
 
 <a href="/logout">Logout</a>
 
