--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -17,7 +17,10 @@
     </tr>
 </table>
 
-
+<a href="/edit?id=<%= user._id%>">Edit</a>
+<br>
 <a href="/logout">Logout</a>
+
+
 
 <% include('../layouts/footer.ejs') %>
