--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -2,6 +2,58 @@
 
 <h1>Dashboard</h1>
 <br><br>
+
+<table width="50%">
+    <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Mobile</th>
+        <th>Image</th>
+        <th>Verified</th>
+    </tr>
+
+    <% 
+
+        if(users.length > 0){
+            for(let i =0;i<users.length;i++){
+                %>
+                <tr>
+                    <td><%=users[i].name %></td>
+                    <td><%=users[i].email %></td>
+                    <td><%=users[i].mobile %></td>
+                    <td><img src="/userImages/<%=users[i].image %>" alt="/userImages/<%=users[i].image %>" width="100px" height="100px"></td>
+                    <td><%
+                        if(users[i].is_varified == 0){
+                            %>
+                            <p>Not Verified</p>
+                            <%
+                        }
+                        else{
+                            %>
+                            <p>Verified</p>
+                            <%
+                        }
+                        
+                        %></td>
+                </tr>
+
+    
+                <%
+            }
+        }
+        else{
+            %>
+
+            <tr>
+                <td colspan="5">Users Not Found</td>
+            </tr>
+
+            <%
+        }
+    
+    %>
+</table>
+
 <a href="/admin/home">Go to Home</a>
 
 <% include("../layouts/footer.ejs") %>
