Added Add user functionality to admin

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -3,6 +3,9 @@
 <h1>Dashboard</h1>
 <br><br>
 
+<a href="/admin/new-user">Add New User</a>
+<br><br>
+
 <table width="50%">
     <tr>
         <th>Name</th>
