added edit user data functionality to admin

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -13,6 +13,7 @@
         <th>Mobile</th>
         <th>Image</th>
         <th>Verified</th>
+        <th>Actions</th>
     </tr>
 
     <% 
@@ -38,6 +39,7 @@
                         }
                         
                         %></td>
+                        <td><a href="/admin/edit-user?id=<%= users[i]._id%>">Edit</a></td>
                 </tr>
 
     
