added delete user functionality to admin

--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -11,7 +11,10 @@
     <br><br>
     
     <p>Email and Mobile once Entered cannot be changed</p>
+
     <input type="submit" value="Update Profile">
+
+    <a href="/home">Home</a>
 
 
 </form>
